@@ -17,7 +17,7 @@ class CacheResourceCustomRegisteredTests extends CacheResourceCustomMysqlTests {
         $this->smarty = SmartyTests::$smarty;
         SmartyTests::init();
 
-        if (!class_exists(Smarty_CacheResource_Mysqltest, false)) {
+        if (!class_exists('Smarty_CacheResource_Mysqltest', false)) {
             require_once( dirname(__FILE__) . "/PHPunitplugins/CacheResource.Mysqltest.php" );
         }
         $this->smarty->caching_type = 'foobar';
